# jate

./: .gitignore  .gitmodules  CMakeLists.txt
examples/: CMakeLists.txt
examples/sandbox/: CMakeLists.txt  main.cpp
jate/: CMakeLists.txt
jate/include/jate/: application.h
jate/include/jate/components/: component.h
jate/include/jate/components/render_units/: rect2d_render_unit.h  render_unit.h
jate/include/jate/maths/: quaternions.h  vectors.h
jate/include/jate/models/: entity.h  transform.h  world.h
jate/include/jate/rendering/: data_structs.h  renderer.h
jate/include/jate/rendering/vulkan/: exceptions.h  vulkan_buffers.h  vulkan_command_manager.h  vulkan_device.h  vulkan_instance.h  vulkan_pipeline.h  vulkan_renderer.h  vulkan_swapchain.h  vulkan_vertexbuffer.h
jate/include/jate/systems/: render_system.h  system.h
jate/include/jate/utils/: concepts.h  utils.h
jate/include/jate/vulkan/: vulkan_device.h  vulkan_instance.h  vulkan_pipeline.h  vulkan_swapchain.h  vulkan_vertexbuffer.h
jate/include/jate/window/: window.h
jate/shaders/: simple.frag  simple.vert
jate/src/: application.cpp
jate/src/components/render_units/: rect2d_render_unit.cpp  render_unit.cpp
jate/src/models/: entity.cpp  world.cpp
jate/src/rendering/vulkan/: vulkan_buffers.cpp  vulkan_command_manager.cpp  vulkan_device.cpp  vulkan_instance.cpp  vulkan_pipeline.cpp  vulkan_renderer.cpp  vulkan_swapchain.cpp  vulkan_vertexbuffer.cpp
jate/src/systems/: render_system.cpp
jate/src/vulkan/: vulkan_device.cpp  vulkan_instance.cpp  vulkan_pipeline.cpp  vulkan_swapchain.cpp  vulkan_vertexbuffer.cpp
jate/src/window/: window.cpp
